Hoàn thành view phòng Chat và chi tiết công việc dành cho master và tasker

--- a/src/main/resources/templates/task/create/step-4.html
+++ b/src/main/resources/templates/task/create/step-4.html
@@ -11,7 +11,9 @@
         <div class="container">
             <div class="row border-bottom pb-3">
                 <div class="col-md-1 box-logo-step">
-                    <img alt="TaskUnite" class="logo-step" th:src="@{/images/favicon.png}">
+                    <a th:href="@{/}">
+                        <img alt="TaskUnite" class="logo-step" th:src="@{/images/favicon.png}">
+                    </a>
                 </div>
                 <div class="col-md-9 offset-md-2">
                     <div class="box-step ">
@@ -72,7 +74,7 @@
                             <img alt="form" class="build-progress__sub-bar__icon" th:src="@{/images/confirm.svg}">
                             <div class="build-progress__sub-bar__message">
                                 <span>
-                                    Gân xong rôi! Chúng tôi chỉ cần thêm một vài chi tiết để kết nối bạn với Nhân viên của bạn.
+                                    Gần xong rôi! Chúng tôi chỉ cần thêm một vài chi tiết để kết nối bạn với Nhân viên của bạn.
                                 </span>
                             </div>
                         </div>
