--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1671,7 +1671,7 @@ a:hover {
 }
 
 
-.title-date span.iconSlideUp {
+.iconSlideUp {
   font-weight: 100 !important;
   position: absolute;
   top: 20px;
@@ -1680,15 +1680,22 @@ a:hover {
   height: 20px;
 }
 
-.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.is-selected, .btn-primary:visited:hover, .btn-primary:visited:focus, .btn-primary:visited:active, .btn-primary:visited.is-selected {
-  border: 1px solid #438e29;
-  background-color: #438e29;
+.iconSlideUp.roomTask {
+  top:5px
 }
 
-.btn-primary {
-  border: 1px solid #51af33;
-  background-color: #51af33;
-}
+
+/*.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.is-selected, .btn-primary:visited:hover, .btn-primary:visited:focus, .btn-primary:visited:active, .btn-primary:visited.is-selected {*/
+/*  border: 1px solid #438e29;*/
+/*  background-color: #438e29;*/
+/*}*/
+
+/*.btn-primary {*/
+/*  border: 1px solid #51af33;*/
+/*  background-color: #51af33;*/
+/*}*/
+
+
 
 .option-date button {
   padding: 0.5em 1.38em 0.5em;
@@ -2519,6 +2526,108 @@ input.iBanking {
   border-radius: 50%;
   object-fit: cover;
 }
+
+div.name{
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap !important;
+  max-width: 150px;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.box-star span{
+  font-size: 30px;
+  cursor: pointer;
+}
+.box-star span.icon-star {
+  color: #ffdd00;
+}
+
+/*.btn-task-done {*/
+/*  position: relative;*/
+/*  background: transparent;*/
+/*  outline: none;*/
+/*  border: none;*/
+/*  height: 45px;*/
+/*  padding: 10px 30px;*/
+/*  text-transform: uppercase;*/
+/*  cursor: pointer;*/
+/*}*/
+
+/*.btn-task-done:focus{*/
+/*  border: none;*/
+/*  outline: none;*/
+/*}*/
+
+/*.btn-task-done:hover{*/
+/*  color: #fff;*/
+/*}*/
+
+/*.btn-task-done span:nth-child(1){*/
+/*  position: absolute;*/
+/*  top: 0;*/
+/*  left: 0;*/
+/*  width: 100%;*/
+/*  height: 100%;*/
+/*  border: solid 1px #28A745;*/
+/*  border-radius: 38% 62% 63% 37% / 41% 44% 56% 59%;*/
+/*  transition: .5s;*/
+/*  animation: animate 6s linear infinite;*/
+/*}*/
+/*.btn-task-done:hover span:nth-child(1){*/
+/*  background: #28A745;*/
+/*}*/
+
+/*.btn-task-done span:nth-child(2){*/
+/*  position: absolute;*/
+/*  top: 0;*/
+/*  left: 0;*/
+/*  width: 100%;*/
+/*  height: 100%;*/
+/*  border: solid 1px #28A745;*/
+/*  border-radius: 38% 62% 63% 37% / 41% 44% 56% 59%;*/
+/*  transition: .5s;*/
+/*  animation: animate 4s linear infinite;*/
+/*}*/
+/*.btn-task-done:hover span:nth-child(2){*/
+/*  background: #28A745;*/
+/*}*/
+
+/*.btn-task-done span:nth-child(3){*/
+/*  position: absolute;*/
+/*  top: 0;*/
+/*  left: 0;*/
+/*  width: 100%;*/
+/*  height: 100%;*/
+/*  border: solid 1px #28A745;*/
+/*  border-radius: 38% 62% 63% 37% / 41% 44% 56% 59%;*/
+/*  transition: .5s;*/
+/*  animation: animate2 10s linear infinite;*/
+/*}*/
+/*.btn-task-done:hover span:nth-child(3){*/
+/*  background: #28A745;*/
+/*}*/
+
+/*@keyframes animate {*/
+/*  0% {*/
+/*    transform: rotate(0deg);*/
+/*  }*/
+/*  100%{*/
+/*    transform: rotate(360deg);*/
+/*  }*/
+/*}*/
+
+/*@keyframes animate2 {*/
+/*  0% {*/
+/*    transform: rotate(360deg);*/
+/*  }*/
+/*  100%{*/
+/*    transform: rotate(0deg);*/
+/*  }*/
+/*}*/
+
+
 
 /*FONT SIZE*/
 .t-30 {
