--- a/src/main/resources/templates/task/create/step-1.html
+++ b/src/main/resources/templates/task/create/step-1.html
@@ -11,7 +11,9 @@
         <div class="container">
             <div class="row border-bottom pb-3">
                 <div class="col-md-1 box-logo-step">
-                    <img alt="TaskUnite" class="logo-step" th:src="@{/images/favicon.png}">
+                    <a th:href="@{/}">
+                        <img alt="TaskUnite" class="logo-step" th:src="@{/images/favicon.png}">
+                    </a>
                 </div>
                 <div class="col-md-9 offset-md-2">
                     <div class="box-step">
