--- a/src/main/resources/templates/account/login/login.html
+++ b/src/main/resources/templates/account/login/login.html
@@ -19,16 +19,16 @@
             <div class="row">
 
                 <div class="col-md-6 offset-md-3 mt-5">
-                    <form th:action="@{/login}" style="background: rgba(0,0,0,0.55)"
+                    <form th:action="@{/api/authentication}" style="background: rgba(0,0,0,0.55)"
                           class="ftco-animate fadeInUp ftco-animated border p-4" method="post">
                         <h3 class="border-bottom pb-2 text-white">Login</h3>
                         <div class="form-group mt-1">
                             <label class="text-white">Username: </label>
-                            <input type="text" class="form-control" placeholder="Username...">
+                            <input type="text" class="form-control" id="username" name="username" placeholder="Username...">
                         </div>
                         <div class="form-group">
                             <label class="text-white">Password: </label>
-                            <input type="password" class="form-control" placeholder="Password...">
+                            <input type="password" class="form-control" id="password" name="password" placeholder="Password...">
                             <a th:href="@{/account/register}" style="font-size: 12px" class="font-italic text-primary">Haven't got an account yet? Click here</a> <br>
                         </div>
                         <div class="form-group text-center">
