--- a/src/main/resources/templates/account/register/register.html
+++ b/src/main/resources/templates/account/register/register.html
@@ -20,17 +20,17 @@
             <div class="row">
 
                 <div class="col-md-8 offset-md-2 mt-5">
-                    <form th:action="@{/templates/account/register}" style="background: rgba(0,0,0,0.55)"
+                    <form th:action="@{/account/register}" th:object="${userInfo}" style="background: rgba(0,0,0,0.55)"
                           class="border p-4" method="post">
                         <h3 class="border-bottom pb-2 text-white" th:text="#{register.form-title}">Become a member</h3>
                         <p class="form-description">Create an account to get started. All fields required.</p>
                         <div class="form-group mt-1">
                             <label class="text-white" th:text="#{register.username}">Username: </label>
-                            <input type="text" class="form-control" placeholder="Username...">
+                            <input type="text" class="form-control" placeholder="Username..." th:field="*{login}">
                         </div>
                         <div class="form-group">
                             <label class="text-white" th:text="#{register.password}">Password: </label>
-                            <input type="password" class="form-control" placeholder="Password...">
+                            <input type="password" class="form-control" placeholder="Password..." th:field="*{password}">
                         </div>
                         <div class="form-group">
                             <label class="text-white" th:text="#{register.confirm-password}">Confirm Password: </label>
@@ -38,23 +38,27 @@
                         </div>
                         <div class="form-group mt-1">
                             <label class="text-white" th:text="#{register.email}">Email: </label>
-                            <input type="text" class="form-control" placeholder="Email...">
+                            <input type="text" class="form-control" placeholder="Email..." th:field="*{email}">
                         </div>
                         <div class="form-group mt-1">
                             <div class="row">
                                 <div class="col-6">
                                     <label class="text-white" th:text="#{register.first-name}">First Name: </label>
-                                    <input type="text" class="form-control" placeholder="First name...">
+                                    <input type="text" class="form-control" placeholder="First name..." th:field="*{firstName}">
                                 </div>
                                 <div class="col-6">
                                     <label class="text-white" th:text="#{register.last-name}">Last name: </label>
-                                    <input type="text" class="form-control" placeholder="Last name...">
+                                    <input type="text" class="form-control" placeholder="Last name..." th:field="*{lastName}">
                                 </div>
                             </div>
                         </div>
                         <div class="form-group mt-1">
                             <label class="text-white" th:text="#{register.mobile-phone}">Mobile phone: </label>
-                            <input type="text" class="form-control" placeholder="Mobile phone...">
+                            <input type="text" class="form-control" placeholder="Mobile phone..." th:field="*{phone}" >
+                        </div>
+                        <div class="form-group mt-1">
+                            <label class="text-white" th:text="#{register.address}">Address: </label>
+                            <input type="text" class="form-control" placeholder="Address..." th:field="*{address}">
                         </div>
                         <p class="form-agreement">By signing up you agree to our <a href="#">Terms of Service</a> and <a href="#">Privacy Policy</a>.</p>
                         <div class="form-group text-center mt-5">
