--- a/src/main/resources/templates/fragment/layout.html
+++ b/src/main/resources/templates/fragment/layout.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <!--Style sheet-->
     <th:block th:fragment="head">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="icon" type="image/png" th:href="@{images/favicon.png}">
+        <link rel="icon" type="image/png" th:href="@{~/images/favicon.png}">
         <link rel="stylesheet" th:href="@{/fonts/icomoon/style.css}">
         <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
         <link rel="stylesheet" th:href="@{/css/magnific-popup.css}">
@@ -43,7 +44,7 @@
                         <div class="col-2">
                             <h2 class="mb-0 site-logo">
                                 <a th:href="@{/}">
-                                    <img th:src="@{/images/logo.png}" th:alt="#{web.name}" th:height="50">
+                                    <img th:src="@{~/images/logo.png}" th:alt="#{web.name}" th:height="50">
                                 </a>
                             </h2>
                         </div>
@@ -57,7 +58,7 @@
                                     </div>
                                     <ul class="site-menu js-clone-nav d-none d-lg-block">
                                         <li class="has-children">
-                                            <a href="category.html" th:text="#{home.category}">Category</a>
+                                            <a th:href="@{/category}" th:text="#{home.category}"></a>
                                             <ul class="dropdown arrow-top">
                                                 <li><a href="#">Category</a></li>
                                                 <li class="has-children">
@@ -70,27 +71,44 @@
                                                 </li>
                                             </ul>
                                         </li>
-                                        <li class="has-children">
-                                            <a href="category.html" th:text="#{home.services}">Category</a>
-                                            <ul class="dropdown arrow-top">
-                                                <li><a href="#">Services</a></li>
-                                                <li class="has-children">
-                                                    <a href="#">More Links</a>
-                                                    <ul class="dropdown">
-                                                        <li><a href="#">Browse Candidates</a></li>
-                                                        <li><a href="#">Post a Job</a></li>
-                                                        <li><a href="#">Employeer Profile</a></li>
-                                                    </ul>
-                                                </li>
-                                            </ul>
-                                        </li>
+                                        <!--<li class="has-children">-->
+                                            <!--<a href="category.html" th:text="#{home.services}">Category</a>-->
+                                            <!--<ul class="dropdown arrow-top">-->
+                                                <!--<li><a href="#">Services</a></li>-->
+                                                <!--<li class="has-children">-->
+                                                    <!--<a href="#">More Links</a>-->
+                                                    <!--<ul class="dropdown">-->
+                                                        <!--<li><a href="#">Browse Candidates</a></li>-->
+                                                        <!--<li><a href="#">Post a Job</a></li>-->
+                                                        <!--<li><a href="#">Employeer Profile</a></li>-->
+                                                    <!--</ul>-->
+                                                <!--</li>-->
+                                            <!--</ul>-->
+                                        <!--</li>-->
                                         <li><a th:href="@{/contact}" th:text="#{home.contact}">Contact</a></li>
-                                        <li><a href="#" th:text="#{home.sign-in}">Sign in</a></li>
-                                        <li>
-                                            <a th:href="@{/task/create}">
+                                        <li sec:authorize="!isAuthenticated()"><a th:href="@{/account/login}" th:text="#{home.sign-in}" >Sign in</a></li>
+                                        <!--<li sec:authorize="!isAuthenticated()"><a th:href="@{/account/register}" th:text="#{home.register}" >Register</a></li>-->
+                                        <li sec:authorize="!isAuthenticated()">
+                                            <a th:href="@{/account/intro}">
                                                 <span class="bg-primary text-white py-3 px-4 rounded">
                                                     <span class="icon-plus mr-2" style="margin-top: -2px;"></span>
-                                                    <th:block th:text="#{home.post-new-job}"> </th:block>
+                                                    <th:block th:text="#{home.register}">Register </th:block>
+                                                </span>
+                                            </a>
+                                        </li>
+                                        <!--<li sec:authorize="isAuthenticated()">-->
+                                            <!--<a th:href="@{/task/create/step1}">-->
+                                                <!--<span class="bg-primary text-white py-3 px-4 rounded">-->
+                                                    <!--<span class="icon-plus mr-2" style="margin-top: -2px;"></span>-->
+                                                    <!--<th:block th:text="#{home.post-new-job}"> </th:block>-->
+                                                <!--</span>-->
+                                            <!--</a>-->
+                                        <!--</li>-->
+                                        <li sec:authorize="isAuthenticated()">
+                                            <a th:href="@{/profile}">
+                                                <span class="bg-primary text-white py-3 px-4 rounded">
+                                                    <span class="icon-user mr-2" style="margin-top: -2px;"></span>
+                                                    <th:block th:text="#{home.profile}">Profile </th:block>
                                                 </span>
                                             </a>
                                         </li>
@@ -156,10 +174,7 @@
                 <div class="col-md-12">
                     <p>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                        Copyright &copy;
-                        <script data-cfasync="false"
-                                src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
-                        <script>document.write(new Date().getFullYear());</script>
+                        Copyright &copy; 2019
                         All Rights Reserved | This template is made with
                         <i class="icon-heart text-warning" ria-hidden="true"></i> by
                         <a href="https://colorlib.com" target="_blank">Colorlib</a>
@@ -186,25 +201,27 @@
     <script th:src="@{/js/aos.js}"></script>
     <script th:src="@{/js/mediaelement-and-player.min.js}"></script>
     <script th:src="@{/js/main.js}"></script>
-        <script>
-            document.addEventListener('DOMContentLoaded', function() {
-                var mediaElements = document.querySelectorAll('video, audio'), total = mediaElements.length;
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            var mediaElements = document.querySelectorAll('video, audio'), total = mediaElements.length;
 
-                for (var i = 0; i < total; i++) {
-                    new MediaElementPlayer(mediaElements[i], {
-                        pluginPath: 'https://cdn.jsdelivr.net/npm/mediaelement@4.2.7/build/',
-                        shimScriptAccess: 'always',
-                        success: function () {
-                            var target = document.body.querySelectorAll('.player'), targetTotal = target.length;
-                            for (var j = 0; j < targetTotal; j++) {
-                                target[j].style.visibility = 'visible';
-                            }
+            for (var i = 0; i < total; i++) {
+                new MediaElementPlayer(mediaElements[i], {
+                    pluginPath: 'https://cdn.jsdelivr.net/npm/mediaelement@4.2.7/build/',
+                    shimScriptAccess: 'always',
+                    success: function () {
+                        var target = document.body.querySelectorAll('.player'), targetTotal = target.length;
+                        for (var j = 0; j < targetTotal; j++) {
+                            target[j].style.visibility = 'visible';
                         }
-                    });
-                }
-            });
-        </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCHAsBwcpdVr3Yrr6N2szcfMK5MYdfi3k0&libraries=places&callback=initAutocomplete" async defer></script>
+                    }
+                });
+            }
+        });
+    </script>
+    <script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCHAsBwcpdVr3Yrr6N2szcfMK5MYdfi3k0&libraries=places&callback=initAutocomplete"
+        async defer></script>
 </th:block>
 </body>
 </html>
