--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -15,7 +15,7 @@
 
     <div style="height: 113px;"></div>
 
-    <div class="site-blocks-cover overlay" th:style="'background-image: url(' + @{/images/hero_1.jpg} + ');'"
+    <div class="site-blocks-cover overlay" th:style="'background-image: url(' + @{~/images/hero_1.jpg} + ');'"
          data-aos="fade" data-stellar-background-ratio="0.5">s
         <div class="container">
             <div class="row align-items-center">
@@ -125,7 +125,7 @@
                     <div class="rounded border jobs-wrap">
                         <a href="job-single.html" class="job-item d-block d-md-flex align-items-center  border-bottom fulltime">
                             <div class="company-logo blank-logo text-center text-md-left pl-3">
-                                <img src="images/company_logo_blank.png" alt="Avatar master" class="img-fluid mx-auto">
+                                <img th:src="@{~/images/company_logo_blank.png}" alt="Avatar master" class="img-fluid mx-auto">
                             </div>
                             <div class="job-details h-100">
                                 <div class="p-3 align-self-center">
@@ -154,7 +154,7 @@
                         </a>
                         <a href="job-single.html" class="job-item d-block d-md-flex align-items-center  border-bottom fulltime">
                             <div class="company-logo blank-logo text-center text-md-left pl-3">
-                                <img src="images/company_logo_blank.png" alt="Avatar master" class="img-fluid mx-auto">
+                                <img th:src="@{~/images/company_logo_blank.png}" alt="Avatar master" class="img-fluid mx-auto">
                             </div>
                             <div class="job-details h-100">
                                 <div class="p-3 align-self-center">
@@ -183,7 +183,7 @@
                         </a>
                         <a href="job-single.html" class="job-item d-block d-md-flex align-items-center  border-bottom fulltime">
                             <div class="company-logo blank-logo text-center text-md-left pl-3">
-                                <img src="images/company_logo_blank.png" alt="Avatar master" class="img-fluid mx-auto">
+                                <img th:src="@{~/images/company_logo_blank.png}" alt="Avatar master" class="img-fluid mx-auto">
                             </div>
                             <div class="job-details h-100">
                                 <div class="p-3 align-self-center">
@@ -288,7 +288,7 @@
                   <span class="icon-wrap">
                     <span class="icon icon-play"></span>
                   </span>
-                            <img src="images/hero_2.jpg" alt="Image" class="img-fluid rounded">
+                            <img th:src="@{~/images/hero_2.jpg}" alt="Image" class="img-fluid rounded">
                         </a>
                     </div>
 
@@ -306,7 +306,7 @@
         </div>
     </div>
 
-    <div class="site-blocks-cover overlay inner-page" style="background-image: url('../static/images/hero_1.jpg');" data-aos="fade" data-stellar-background-ratio="0.5">
+    <div class="site-blocks-cover overlay inner-page" style="background-image: url('/images/hero_1.jpg');" data-aos="fade" data-stellar-background-ratio="0.5">
         <div class="container">
             <div class="row align-items-center justify-content-center">
                 <div class="col-md-6 text-center" data-aos="fade">
@@ -372,7 +372,7 @@
                 <div class="media-with-text">
                     <div class="img-border-sm mb-4">
                         <a href="#" class="image-play">
-                            <img src="images/img_1.jpg" alt="" class="img-fluid">
+                            <img th:src="@{~/images/img_1.jpg}" alt="" class="img-fluid">
                         </a>
                     </div>
                     <h2 class="heading mb-0 h5"><a href="#">Jobs are made easy</a></h2>
@@ -383,7 +383,7 @@
                 <div class="media-with-text">
                     <div class="img-border-sm mb-4">
                         <a href="#" class="image-play">
-                            <img src="images/img_2.jpg" alt="" class="img-fluid">
+                            <img th:src="@{~/images/img_2.jpg}" alt="" class="img-fluid">
                         </a>
                     </div>
                     <h2 class="heading mb-0 h5"><a href="#">Jobs are made easy</a></h2>
@@ -394,7 +394,7 @@
                 <div class="media-with-text">
                     <div class="img-border-sm mb-4">
                         <a href="#" class="image-play">
-                            <img src="images/img_3.jpg" alt="" class="img-fluid">
+                            <img th:src="@{~/images/img_3.jpg}" alt="" class="img-fluid">
                         </a>
                     </div>
                     <h2 class="heading mb-0 h5"><a href="#">Jobs are made easy</a></h2>
@@ -405,7 +405,7 @@
                 <div class="media-with-text">
                     <div class="img-border-sm mb-4">
                         <a href="#" class="image-play">
-                            <img src="images/img_1.jpg" alt="" class="img-fluid">
+                            <img th:src="@{~/images/img_1.jpg}" alt="" class="img-fluid">
                         </a>
                     </div>
                     <h2 class="heading mb-0 h5"><a href="#">Jobs are made easy</a></h2>
@@ -416,7 +416,7 @@
                 <div class="media-with-text">
                     <div class="img-border-sm mb-4">
                         <a href="#" class="image-play">
-                            <img src="images/img_2.jpg" alt="" class="img-fluid">
+                            <img th:src="@{~/images/img_2.jpg}" alt="" class="img-fluid">
                         </a>
                     </div>
                     <h2 class="heading mb-0 h5"><a href="#">Jobs are made easy</a></h2>
@@ -427,7 +427,7 @@
                 <div class="media-with-text">
                     <div class="img-border-sm mb-4">
                         <a href="#" class="image-play">
-                            <img src="images/img_3.jpg" alt="" class="img-fluid">
+                            <img th:src="@{~/images/img_3.jpg}" alt="" class="img-fluid">
                         </a>
                     </div>
                     <h2 class="heading mb-0 h5"><a href="#">Jobs are made easy</a></h2>
@@ -438,7 +438,7 @@
                 <div class="media-with-text">
                     <div class="img-border-sm mb-4">
                         <a href="#" class="image-play">
-                            <img src="images/img_1.jpg" alt="" class="img-fluid">
+                            <img th:src="@{~/images/img_1.jpg}" alt="" class="img-fluid">
                         </a>
                     </div>
                     <h2 class="heading mb-0 h5"><a href="#">Jobs are made easy</a></h2>
@@ -449,7 +449,7 @@
                 <div class="media-with-text">
                     <div class="img-border-sm mb-4">
                         <a href="#" class="image-play">
-                            <img src="images/img_2.jpg" alt="" class="img-fluid">
+                            <img th:src="@{~/images/img_2.jpg}" alt="" class="img-fluid">
                         </a>
                     </div>
                     <h2 class="heading mb-0 h5"><a href="#">Jobs are made easy</a></h2>
@@ -460,7 +460,7 @@
                 <div class="media-with-text">
                     <div class="img-border-sm mb-4">
                         <a href="#" class="image-play">
-                            <img src="images/img_3.jpg" alt="" class="img-fluid">
+                            <img th:src="@{~/images/img_3.jpg}" alt="" class="img-fluid">
                         </a>
                     </div>
                     <h2 class="heading mb-0 h5"><a href="#">Jobs are made easy</a></h2>
